--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,16 +1,17 @@
 {
-    "compilerOptions": {
-  
-      "module": "commonjs",
-      "target": "ES2020",
-      "outDir": "./dist",
-      "incremental": true,
-      "allowSyntheticDefaultImports": true,
-  
-      "strict": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "noFallthroughCasesInSwitch": true,
-  
-    }
-  }
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "ES2020",
+    "outDir": "./dist",
+    "incremental": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,   
+    "skipLibCheck": true, 
+
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src"]
+}
