--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,11 +16,13 @@
     "bcrypt": "^5.1.1",
     "core": "workspace:^",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
     "nodemon": "^3.1.1",
     "ts-node": "^10.9.2"
