--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "target": "ES2020",
     "outDir": "./dist",
+    "typeRoots" : ["./src/types", "./node_modules/@types"],
     "incremental": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,   
